gRPC-http-transcoding/k8s/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: calc-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-json
      protocol: HTTP         # El filtro convertirá HTTP→gRPC
    hosts: ["calc.example.com"]
